lockwise-proof-of-concept/samples/positive/unused/resources/120/3.otf
version https://git-lfs.github.com/spec/v1
oid sha256:fa6c3e1873e38b753c4ba79655b6404678c15ac74c3c5513ba28e2901fa65145
size 23296
