lockwise-proof-of-concept/samples/negative/resources/fp33/9.otf
version https://git-lfs.github.com/spec/v1
oid sha256:b92aea96a5ccccd25636edb2e73afb2fcc1ddc770a2ec4964e718fbcdfa96604
size 94112
